--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
     implementation "androidx.cardview:cardview:1.0.0"
 
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -62,8 +63,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 
     /* ML Kit */
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
-    implementation 'com.google.android.gms:play-services-mlkit-face-detection:16.2.0'
+    implementation 'com.google.mlkit:text-recognition:16.0.0-beta4'
+    implementation 'com.google.mlkit:face-detection:16.1.5'
 
     /* Camera View */
     implementation 'com.otaliastudios:cameraview:1.6.0'
